<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="Default value"
        android:key="username"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/name_insert" />
    <PreferenceCategory android:title="@string/more_info">

        <ListPreference
            android:defaultValue="0"
            android:entries="@array/languages"
            android:entryValues="@array/languagesValues"
            android:key="language"
            android:title="@string/language" />
    </PreferenceCategory>
    <ListPreference
        android:defaultValue="0"
        android:entries="@array/HTTPmethod"
        android:entryValues="@array/HTTPmethodValues"
        android:key="http"
        android:title="@string/http_method" />
    <PreferenceCategory android:title="@string/databases">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/database_method"
            android:entryValues="@array/database_method_values"
            android:key="db"
            android:title="@string/database_method" />
    </PreferenceCategory>
</PreferenceScreen>