<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="sdm.yuki.sdm1.view.dashboard.DashboardActivity">

    <Button
        android:id="@+id/buttonDashGetQuotations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:onClick="buttonClicked"
        android:text="@string/get_quotations"
        android:textColor="@drawable/button_colors"
        app:layout_constraintBottom_toTopOf="@+id/buttonDashFavoriteQuotations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonDashFavoriteQuotations"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:onClick="buttonClicked"
        android:text="@string/favorite_quotations"
        android:textColor="@drawable/button_colors"
        app:layout_constraintBottom_toTopOf="@+id/buttonDashSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDashGetQuotations" />

    <Button
        android:id="@+id/buttonDashSettings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:onClick="buttonClicked"
        android:text="@string/settings"
        android:textColor="@drawable/button_colors"
        app:layout_constraintBottom_toTopOf="@+id/buttonDashAbout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDashFavoriteQuotations" />

    <Button
        android:id="@+id/buttonDashAbout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/buttons"
        android:onClick="buttonClicked"
        android:text="@string/about"
        android:textColor="@drawable/button_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDashSettings" />
</android.support.constraint.ConstraintLayout>
